# mqtt-shelly-ht

./: .gitignore  Makefile.am  README  configure.ac
cfg/: Makefile.am
extras/: Makefile.am  README.message  message  mqtt-shelly-ht@.service
src/: Makefile.am  mqtt-shelly-ht.c
