## SPDX-License-Identifier: OSL-3.0
## Copyright (C) 2025  Trevor Woerner <twoerner@gmail.com>

########################
## src/Makefile.am
########################
SUBDIRS =
AM_CFLAGS = -Wall -Werror -Wextra -Wconversion -Wreturn-type -Wstrict-prototypes

bin_PROGRAMS = mqtt-shelly-ht
mqtt_shelly_ht_SOURCES = mqtt-shelly-ht.c
